added researched information to page and started the mobile view design

--- a/index.html
+++ b/index.html
@@ -1,12 +1,244 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <nav>
+        <h1>Network Solutions</h1>
+        <div class="links">
+            <button>Engineering</button>
+            <button>Implementation</button>
+            <button>Maintenance</button>
+            <button>Repairs</button>
+        </div>
+    </nav>
+
+    <main>
+        <div class="mainHeader">
+            <div>
+                <img src="./assets/images/network4.jpeg" />
+                <img src="./assets/images/network1.jpeg" />
+                <img src="./assets/images/network2.jpeg" />
+                <img src="./assets/images/network3.jpeg" />
+                <img src="./assets/images/network4.jpeg" />
+            </div>
+            <p>
+                Network solutions refer to the various products and services designed to heop businesses and individuals
+                establish, manage, and optimize their computer networks. In today's digital age, networks are essential
+                for
+                communications encompass a wide range of technologies and tools that facilitate these activities,
+                ensurign that information is transmitted efficiently and securely across different devices and
+                locations.
+            </p>
+        </div>
+
+        <div class="mainBody">
+            <h4>Cisco Network Devices:</h4>
+                <ol>
+                    <li>
+                        <h4>Cisco Routers:</h4>
+                        <ul>
+                            <li>
+                                <b>Purpose:</b>
+                                <span>
+                                    Routers are essential devices that connect different networks together. Cisco routers enable data packet forwarding and routing between devices and networks.
+                                </span>
+                            </li>
+                            <li>
+                                <b>Features:</b>
+                                <span>
+                                    Advanced routing protocols, security features, and quality of service (QoS) options for optimizing network performance.
+                                </span>
+                            </li>
+                            <li>
+                                <b>Example Series:</b>
+                                <span>
+                                    Advanced routing protocols, security features, and quality of service (QoS) options for optimizing network performance.
+                                </span>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h4>Cisco Switches:</h4>
+                        <ul>
+                            <li>
+                                <b>Purpose:</b>
+                                <span>
+                                    Switches connect devices within a local network (LAN) and manage data traffic efficiently by forwarding data only to specific devices.
+                                </span>
+                            </li>
+                            <li>
+                                <b>Features:</b>
+                                <span>
+                                    VLAN support, PoE (Power over Ethernet) options, high-speed data transfer, and network management capabilities.
+                                </span>
+                            </li>
+                            <li>
+                                <b>Example Series:</b>
+                                <span>
+                                    Cisco Catalyst series.
+                                </span>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h4>Cisco Wireless Access Points:</h4>
+                        <ul>
+                            <li>
+                                <b>Purpose:</b>
+                                <span>
+                                    Access points provide wireless connectivity to devices within a specific area, enabling Wi-Fi access in offices, campuses, and public spaces.
+                                </span>
+                            </li>
+                            <li>
+                                <b>Features:</b>
+                                <span>
+                                    Dual-band support, multiple antennas for improved coverage, and support for the latest Wi-Fi standards (such as 802.11ac and 802.11ax).
+                                </span>
+                            </li>
+                            <li>
+                                <b>Example Series:</b>
+                                <span>
+                                    Cisco Aironet series.
+                                </span>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h4>Cisco Security Appliances:</h4>
+                        <ul>
+                            <li>
+                                <b>Purpose:</b>
+                                <span>
+                                    Security appliances like Cisco ASA (Adaptive Security Appliance) provide firewall and VPN services, ensuring network security against unauthorized access and threats.
+                                </span>
+                            </li>
+                            <li>
+                                <b>Features:</b>
+                                <span>
+                                    Stateful firewall, intrusion prevention, VPN support, and threat intelligence integration.
+                                </span>
+                            </li>
+                            <li>
+                                <b>Example Series:</b>
+                                <span>
+                                    Cisco ASA series.
+                                </span>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h4>Cisco IP Phones:</h4>
+                        <ul>
+                            <li>
+                                <b>Purpose:</b>
+                                <span>
+                                    Cisco IP phones are designed for VoIP (Voice over IP) communication in business environments, providing high-quality voice and video calls over the network.
+                                </span>
+                            </li>
+                            <li>
+                                <b>Features:</b>
+                                <span>
+                                    HD audio, video conferencing capabilities, support for SIP and SCCP protocols, and integration with unified communications platforms.
+                                </span>
+                            </li>
+                            <li>
+                                <b>Example Series:</b>
+                                <span>
+                                    Cisco Unified IP Phone series.
+                                </span>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h4>Cisco Network Management Software:</h4>
+                        <ul>
+                            <li>
+                                <b>Purpose:</b>
+                                <span>
+                                    Cisco provides network management software solutions to monitor, configure, and optimize Cisco devices and networks.
+                                </span>
+                            </li>
+                            <li>
+                                <b>Features:</b>
+                                <span>
+                                    Network monitoring, configuration management, performance analysis, and security management.
+                                </span>
+                            </li>
+                            <li>
+                                <b>Example Series:</b>
+                                <span>
+                                    Cisco Prime Infrastructure, Cisco DNA Center.
+                                </span>
+                            </li>
+                        </ul>
+                    </li>
+                </ol>
+            <h4>Cisco Services and Solutions:</h4>
+                <ol>
+                    <li>
+                        <h4>Cisco Networking Solutions for Cloud:</h4>
+                        <ul>
+                            <li>
+                                <span>
+                                    Cisco offers cloud-based networking solutions, enabling businesses to extend their network infrastructure to the cloud, ensuring scalability and flexibility.
+                                </span>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h4>Cisco Software-Defined Networking (SDN) Solutions:</h4>
+                        <ul>
+                            <li>
+                                <span>
+                                    Cisco SDN solutions, like Cisco ACI (Application Centric Infrastructure), automate network provisioning and management, enhancing agility and reducing operational complexity.
+                                </span>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h4>Cisco Collaboration Solutions:</h4>
+                        <ul>
+                            <li>
+                                <span>
+                                    Cisco collaboration tools include unified communication, video conferencing, messaging, and contact center solutions, fostering seamless communication and collaboration among users.
+                                </span>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h4>Cisco Security Solutions:</h4>
+                        <ul>
+                            <li>
+                                <span>
+                                    Cisco provides a comprehensive suite of security solutions, including firewalls, intrusion prevention systems, endpoint security, and cloud security services, to protect networks from cyber threats.
+                                </span>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h4>Cisco IoT (Internet of Things) Solutions:</h4>
+                        <ul>
+                            <li>
+                                <span>
+                                    Cisco offers IoT solutions that facilitate the deployment and management of IoT devices, enabling businesses to leverage the power of connected devices and data analytics.
+                                </span>
+                            </li>
+                        </ul>
+                    </li>
+                </ol>
+
+                <p>
+                    Businesses often rely on Cisco-certified professionals and experts to design, implement, and manage their network solutions based on Cisco devices. Cisco's extensive product range and innovative technologies continue to play a significant role in shaping modern networking infrastructures.
+                </p>
+        </div>
+    </main>
 </body>
+
 </html>
