change img3 height

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <img src="./assets/images/network4.jpeg" />
                 <img src="./assets/images/network1.jpeg" />
                 <img src="./assets/images/network2.jpeg" />
-                <img src="./assets/images/network3.jpeg" />
+                <img style="height: 100%;" src="./assets/images/network3.jpeg" />
                 <img src="./assets/images/network4.jpeg" />
             </div>
             <p>
