--- a/index.html
+++ b/index.html
@@ -29,12 +29,7 @@
                 <img src="./assets/images/network4.jpeg" />
             </div>
             <p>
-                Network solutions refer to the various products and services designed to heop businesses and individuals
-                establish, manage, and optimize their computer networks. In today's digital age, networks are essential
-                for
-                communications encompass a wide range of technologies and tools that facilitate these activities,
-                ensurign that information is transmitted efficiently and securely across different devices and
-                locations.
+                Network solutions refer to the various products and services designed to help businesses and individuals establish, manage, and optimize their computer networks. In today's digital age, networks are essential for communication, data sharing, and accessing resources on the internet. Network solutions encompass a wide range of technologies and tools that facilitate these activities, ensuring that information is transmitted efficiently and securely across different devices and locations.
             </p>
         </div>
 
