--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
 
 <body>
     <nav>
-        <h1>Network Solutions</h1>
+        <h1>HIFENETS</h1>
         <div class="links">
-            <button>Engineering</button>
-            <button>Implementation</button>
-            <button>Maintenance</button>
-            <button>Repairs</button>
+            <button>SDWAN</button>
+            <button>Cyber Security</button>
+            <button>Contact Us</button>
         </div>
     </nav>
 
@@ -25,16 +24,19 @@
                 <img src="./assets/images/network4.jpeg" />
                 <img src="./assets/images/network1.jpeg" />
                 <img src="./assets/images/network2.jpeg" />
-                <img style="height: 100%;" src="./assets/images/network3.jpeg" />
+                <img src="./assets/images/network3.jpeg" />
                 <img src="./assets/images/network4.jpeg" />
             </div>
             <p>
-                Network solutions refer to the various products and services designed to help businesses and individuals establish, manage, and optimize their computer networks. In today's digital age, networks are essential for communication, data sharing, and accessing resources on the internet. Network solutions encompass a wide range of technologies and tools that facilitate these activities, ensuring that information is transmitted efficiently and securely across different devices and locations.
+                <b>HIFENETS</b> Network solutions provides various products and services designed to help businesses establish, manage, and optimize their computer networks.
+            </p>
+            <p>
+                In today's digital age, networks are essential for communication, data sharing, and accessing resources on the internet. Network solutions encompass a wide range of technologies and tools that facilitate these activities, ensuring that information is transmitted efficiently and securely across different devices and locations.
             </p>
         </div>
 
         <div class="mainBody">
-            <h4>Cisco Network Devices:</h4>
+            <h3>Cisco Network Devices:</h3>
                 <ol>
                     <li>
                         <h4>Cisco Routers:</h4>
@@ -175,7 +177,7 @@
                         </ul>
                     </li>
                 </ol>
-            <h4>Cisco Services and Solutions:</h4>
+            <h3>Cisco Services and Solutions:</h3>
                 <ol>
                     <li>
                         <h4>Cisco Networking Solutions for Cloud:</h4>
