--- a/index.html
+++ b/index.html
@@ -12,17 +12,47 @@
     <nav>
         <h1>HIFENETS</h1>
         <div class="links">
-            <button id="sdwan">SDWAN</button>
             <button id="cyberSec">Cyber Security</button>
+            <button id="sdwan">SDWAN</button>
             <button id="contact">Contact Us</button>
         </div>
     </nav>
 
-    <div class="sdwan">
-        SD-WAN offers a more agile, cost-effective, and secure alternative to traditional legacy WAN setups. Its ability
-        to adapt to changing network demands and optimize performance based on real-time data makes it a preferred
-        choice for many modern organizations.
-    </div>
+    <!-- <div id="btnClick"> -->
+        <div class="cyberSec">
+            <p>
+                Cybersecurity, in general, refers to the practice of protecting computer systems, networks, and data
+                from
+                theft,
+                damage, or unauthorized access. Specifically with Palo Alto Networks, cybersecurity involves
+                implementing
+                their
+                range of security products and services to safeguard an organization's digital assets to organizations
+                worldwide.
+            </p>
+            <p>
+                Palo Alto Networks offers a comprehensive cybersecurity platform that includes next-generation
+                firewalls,
+                advanced threat detection, cloud security, and endpoint protection.
+            </p>
+        </div>
+
+        <div class="sdwan">
+            <p>
+                SD-WAN offers a more agile, cost-effective, and secure alternative to traditional legacy WAN setups. Its
+                ability
+                to adapt to changing network demands and optimize performance based on real-time data makes it a
+                preferred
+                choice for many modern organizations.
+            </p>
+        </div>
+
+        <div class="contact">
+            <p>
+                <a href="mailto:https://romero.hipolito.gmail.com">Romero.Hipolito.Gmail.com</a>
+            </p>
+        </div>
+    <!-- </div> -->
     <main>
         <div class="mainHeader">
             <div>
