worked on about page for an hour

--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Document</title>
+    <title>Hispanic Female Network Solutions</title>
 </head>
 
 <body>
     <nav>
         <h1>HIFENETS</h1>
         <div class="links">
-            <button id="cyberSec">Cyber Security</button>
-            <button id="sdwan">SDWAN</button>
+            <a style="border-bottom:1px solid white;color:white;text-decoration: none;" href="index.html">Home</a>
+            <!-- <button id="cyberSec">Cyber Security</button>
+            <button id="sdwan">SDWAN</button> -->
+            <a style="border-bottom:1px solid white;color:white;text-decoration: none;" href="about.html">About Us</a>
         </div>
     </nav>
 
