Working on Contact Us page. [1/2 h]

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <!-- <button id="cyberSec">Cyber Security</button>
             <button id="sdwan">SDWAN</button> -->
             <a style="border-bottom:1px solid white;color:white;text-decoration: none;" href="about.html">About Us</a>
+            <a style="border-bottom:1px solid white;color:white;text-decoration: none;" href="contactUs.html">Contact Us</a>
         </div>
     </nav>
 
