--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Hispanic Female Network Solutions</title>
+    <link rel="stylesheet" href="./assets/css/about.css">
+    <title>About Us</title>
 </head>
 
 <body>
@@ -13,295 +13,48 @@
         <h1>HIFENETS</h1>
         <div class="links">
             <a style="border-bottom:1px solid white;color:white;text-decoration: none;" href="index.html">Home</a>
-            <!-- <button id="cyberSec">Cyber Security</button>
-            <button id="sdwan">SDWAN</button> -->
-            <a style="border-bottom:1px solid white;color:white;text-decoration: none;" href="about.html">About Us</a>
+            <!-- <button id="cyberSec">Cyber Security</button> -->
+            <!-- <button id="sdwan">SDWAN</button> -->
             <a style="border-bottom:1px solid white;color:white;text-decoration: none;" href="contactUs.html">Contact Us</a>
         </div>
     </nav>
 
-    <!-- <div id="btnClick"> -->
-    <div class="cyberSec">
-        <p>
-            <b>Cybersecurity</b>, in general, refers to the practice of protecting computer systems, networks, and data
-            from
-            theft,
-            damage, or unauthorized access. Specifically with Palo Alto Networks, cybersecurity involves
-            implementing
-            their
-            range of security products and services to safeguard an organization's digital assets to organizations
-            worldwide.
-        </p>
-        <p>
-            <b>Palo Alto Networks</b> offers a comprehensive cybersecurity platform that includes next-generation
-            firewalls,
-            advanced threat detection, cloud security, and endpoint protection.
-        </p>
-        <p>
-            For assistance in design, implementation or repairs of your <b>Cyber Security Solution</b> email us: <a href="mailto:https://romero.hipolito.gmail.com">HIFENETS</a>
-        </p>
+    <div class="container">
+        <div id="main">
+            Our mission is to help enterprises organize<br>
+            a security strategy that can address <br>
+            the demands of modern cybersecurity.
+        </div>
     </div>
+    <nav class="aboutNav">
+        <button id="whoWeAre" class="active">Who We Are</button>
+        <button id="whatWeDo" class="notActive">What We Do</button>
+        <button id="leadership" class="notActive">Leadership</button>
+    </nav>
 
-    <div class="sdwan">
-        <p>
-            <b>SD-WAN</b> offers a more agile, cost-effective, and secure alternative to traditional legacy WAN setups. Its
-            ability
-            to adapt to changing network demands and optimize performance based on real-time data makes it a
-            preferred
-            choice for many modern organizations.
-        </p>
-        <p>
-            For assistance in design, implementation or repairs of your <b>SDWAN Solution</b> email us: <a href="mailto:https://romero.hipolito.gmail.com">HIFENETS</a>
-        </p>
-    </div>
+    <div class="slideUpDiv">
 
-    <main>
-        <div class="mainHeader">
-            <div>
-                <img src="./assets/images/network4.jpeg" />
-                <img src="./assets/images/network1.jpeg" />
-                <img src="./assets/images/network2.jpeg" />
-                <img src="./assets/images/network3.jpeg" />
-                <img src="./assets/images/network4.jpeg" />
-            </div>
-            <p>
-                <b>HIFENETS</b> Network solutions provides various products and services designed to help businesses
-                establish, manage, and optimize their computer networks.
-            </p>
-            <p>
-                In today's digital age, networks are essential for communication, data sharing, and accessing resources
-                on the internet. Network solutions encompass a wide range of technologies and tools that facilitate
-                these activities, ensuring that information is transmitted efficiently and securely across different
-                devices and locations.
-            </p>
+        <div id="aboutDiv1" class="slideUp">
+            Hispanic Female Network Solutions (HIFENET),<br>
+            a minority company founded in Delaware,<br>
+            specializes in IT technologies and Network security.
         </div>
 
-        <div class="mainBody">
-            <h3>Cisco Network Devices:</h3>
-            <ol>
-                <li>
-                    <h4>Cisco Routers:</h4>
-                    <ul>
-                        <li>
-                            <b>Purpose:</b>
-                            <span>
-                                Routers are essential devices that connect different networks together. Cisco routers
-                                enable data packet forwarding and routing between devices and networks.
-                            </span>
-                        </li>
-                        <li>
-                            <b>Features:</b>
-                            <span>
-                                Advanced routing protocols, security features, and quality of service (QoS) options for
-                                optimizing network performance.
-                            </span>
-                        </li>
-                        <li>
-                            <b>Example Series:</b>
-                            <span>
-                                Advanced routing protocols, security features, and quality of service (QoS) options for
-                                optimizing network performance.
-                            </span>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <h4>Cisco Switches:</h4>
-                    <ul>
-                        <li>
-                            <b>Purpose:</b>
-                            <span>
-                                Switches connect devices within a local network (LAN) and manage data traffic
-                                efficiently by forwarding data only to specific devices.
-                            </span>
-                        </li>
-                        <li>
-                            <b>Features:</b>
-                            <span>
-                                VLAN support, PoE (Power over Ethernet) options, high-speed data transfer, and network
-                                management capabilities.
-                            </span>
-                        </li>
-                        <li>
-                            <b>Example Series:</b>
-                            <span>
-                                Cisco Catalyst series.
-                            </span>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <h4>Cisco Wireless Access Points:</h4>
-                    <ul>
-                        <li>
-                            <b>Purpose:</b>
-                            <span>
-                                Access points provide wireless connectivity to devices within a specific area, enabling
-                                Wi-Fi access in offices, campuses, and public spaces.
-                            </span>
-                        </li>
-                        <li>
-                            <b>Features:</b>
-                            <span>
-                                Dual-band support, multiple antennas for improved coverage, and support for the latest
-                                Wi-Fi standards (such as 802.11ac and 802.11ax).
-                            </span>
-                        </li>
-                        <li>
-                            <b>Example Series:</b>
-                            <span>
-                                Cisco Aironet series.
-                            </span>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <h4>Cisco Security Appliances:</h4>
-                    <ul>
-                        <li>
-                            <b>Purpose:</b>
-                            <span>
-                                Security appliances like Cisco ASA (Adaptive Security Appliance) provide firewall and
-                                VPN services, ensuring network security against unauthorized access and threats.
-                            </span>
-                        </li>
-                        <li>
-                            <b>Features:</b>
-                            <span>
-                                Stateful firewall, intrusion prevention, VPN support, and threat intelligence
-                                integration.
-                            </span>
-                        </li>
-                        <li>
-                            <b>Example Series:</b>
-                            <span>
-                                Cisco ASA series.
-                            </span>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <h4>Cisco IP Phones:</h4>
-                    <ul>
-                        <li>
-                            <b>Purpose:</b>
-                            <span>
-                                Cisco IP phones are designed for VoIP (Voice over IP) communication in business
-                                environments, providing high-quality voice and video calls over the network.
-                            </span>
-                        </li>
-                        <li>
-                            <b>Features:</b>
-                            <span>
-                                HD audio, video conferencing capabilities, support for SIP and SCCP protocols, and
-                                integration with unified communications platforms.
-                            </span>
-                        </li>
-                        <li>
-                            <b>Example Series:</b>
-                            <span>
-                                Cisco Unified IP Phone series.
-                            </span>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <h4>Cisco Network Management Software:</h4>
-                    <ul>
-                        <li>
-                            <b>Purpose:</b>
-                            <span>
-                                Cisco provides network management software solutions to monitor, configure, and optimize
-                                Cisco devices and networks.
-                            </span>
-                        </li>
-                        <li>
-                            <b>Features:</b>
-                            <span>
-                                Network monitoring, configuration management, performance analysis, and security
-                                management.
-                            </span>
-                        </li>
-                        <li>
-                            <b>Example Series:</b>
-                            <span>
-                                Cisco Prime Infrastructure, Cisco DNA Center.
-                            </span>
-                        </li>
-                    </ul>
-                </li>
-            </ol>
-            <h3>Cisco Services and Solutions:</h3>
-            <ol>
-                <li>
-                    <h4>Cisco Networking Solutions for Cloud:</h4>
-                    <ul>
-                        <li>
-                            <span>
-                                Cisco offers cloud-based networking solutions, enabling businesses to extend their
-                                network infrastructure to the cloud, ensuring scalability and flexibility.
-                            </span>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <h4>Cisco Software-Defined Networking (SDN) Solutions:</h4>
-                    <ul>
-                        <li>
-                            <span>
-                                Cisco SDN solutions, like Cisco ACI (Application Centric Infrastructure), automate
-                                network provisioning and management, enhancing agility and reducing operational
-                                complexity.
-                            </span>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <h4>Cisco Collaboration Solutions:</h4>
-                    <ul>
-                        <li>
-                            <span>
-                                Cisco collaboration tools include unified communication, video conferencing, messaging,
-                                and contact center solutions, fostering seamless communication and collaboration among
-                                users.
-                            </span>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <h4>Cisco Security Solutions:</h4>
-                    <ul>
-                        <li>
-                            <span>
-                                Cisco provides a comprehensive suite of security solutions, including firewalls,
-                                intrusion prevention systems, endpoint security, and cloud security services, to protect
-                                networks from cyber threats.
-                            </span>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <h4>Cisco IoT (Internet of Things) Solutions:</h4>
-                    <ul>
-                        <li>
-                            <span>
-                                Cisco offers IoT solutions that facilitate the deployment and management of IoT devices,
-                                enabling businesses to leverage the power of connected devices and data analytics.
-                            </span>
-                        </li>
-                    </ul>
-                </li>
-            </ol>
+        <div id="aboutDiv2" class="hide">
+            <h3 style="margin-bottom: 2px;">We span a collection of Networking Solutions</h3>
+            Our certified employees have expertise in networking and cloud infrastructure
+            from recognized technology vendors, including Cisco, Juniper, VMWare, Fortinet.
+            Our operations include WAN/LAN, SDWAN, wireless, VoIP, Security,
+            and coding in popular programming languages, Python and Linux.
 
-            <p>
-                Businesses often rely on Cisco-certified professionals and experts to design, implement, and manage
-                their network solutions based on Cisco devices. Cisco's extensive product range and innovative
-                technologies continue to play a significant role in shaping modern networking infrastructures.
-            </p>
         </div>
-    </main>
 
-    <script src="./assets/js/script.js"></script>
+        <div id="aboutDiv3" class="hide">
+            Pictures and Job Positions
+        </div>
+    </div>
+
+    <script src="./assets/js/about.js"></script>
 </body>
 
 </html>
