added changing background image [1/2 hour]

--- a/index.html
+++ b/index.html
@@ -19,13 +19,30 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="mainHeader">
+            <div>
+                <img src="./assets/images/network4.jpeg" />
+                <img src="./assets/images/network1.jpeg" />
+                <img src="./assets/images/network2.jpeg" />
+                <img src="./assets/images/network3.jpeg" />
+                <img src="./assets/images/network4.jpeg" />
+                <div class="darkscreen"></div>
+                <p>
+                    Our mission is to help enterprises organize<br>
+                    a security strategy that can address <br>
+                    the demands of modern cybersecurity.
+                </p>
+            </div>
+        </div>
+
+
+    <!-- <div class="container">
         <div id="main">
             Our mission is to help enterprises organize<br>
             a security strategy that can address <br>
             the demands of modern cybersecurity.
         </div>
-    </div>
+    </div> -->
     <nav class="aboutNav">
         <button id="whoWeAre" class="active">Who We Are</button>
         <button id="whatWeDo" class="notActive">What We Do</button>
