working in contact form [1/2 h]

--- a/contactUs.html
+++ b/contactUs.html
@@ -16,7 +16,8 @@
             <a style="border-bottom:1px solid white;color:white;text-decoration: none;" href="index.html">Home</a>
             <!-- <button id="cyberSec">Cyber Security</button>
             <button id="sdwan">SDWAN</button> -->
-            <a style="border-bottom:1px solid white;color:white;text-decoration: none;" href="contactUs.html">Contact Us</a>
+            <a style="border-bottom:1px solid white;color:white;text-decoration: none;" href="contactUs.html">Contact
+                Us</a>
         </div>
     </nav>
 
@@ -24,7 +25,40 @@
         <h1 style="margin-bottom: 0;">Contact Us</h1>
         <h3 style="font-family: sans-serif;margin: 0;">sales</h3>
         <hr>
-        Fill out <a href="#form">form</a> to get in touch or <a href="mailto:biondar@hispanicfemalenetworksolutions.com">email</a> us.
+        Fill out <a href="#form">form</a> to get in touch or <a
+            href="mailto:biondar@hispanicfemalenetworksolutions.com">email</a> us.
+
+        <form action="" class="contactForm">
+            <h4>Fill out the form to get in touch with our Sales Team</h4>
+
+            <div class="col1">
+                <label for="firstName">First Name</label>
+                <input id="firstName" type="text">
+
+                <label for="lastName">Last Name</label>
+                <input id="lastName" type="text">
+
+                <label for="email">Email</label>
+                <input id="email" type="text">
+            </div>
+
+            <div class="col2">
+                <label for="company">Company</label>
+                <input id="company" type="text">
+
+                <label for="phone">Phone</label>
+                <input id="phone" type="text">
+
+                <label for="products">Product of interest</label>
+                <input id="products" type="text">
+            </div>
+
+            <label for="help">How can we help?</label>
+            <input id="help" type="text">
+
+            <input type="submit">
+        </form>
     </main>
 </body>
+
 </html>
