--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/about.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Hispanic Female Network Solutions</title>
 </head>
 
@@ -12,20 +12,18 @@
     <nav>
         <h1>HIFENETS</h1>
         <div class="links">
-            <a style="border-bottom:1px solid white;color:white;text-decoration: none;" href="index.html">Home</a>
-            <!-- <button id="cyberSec">Cyber Security</button> -->
-            <!-- <button id="sdwan">SDWAN</button> -->
-            <a style="border-bottom:1px solid white;color:white;text-decoration: none;" href="contactUs.html">Contact Us</a>
+            <a style="border-bottom:1px solid white;color:white;text-decoration:none;font-size: 1.5rem;" href="index.html">Home</a>
+            <a style="border-bottom:1px solid white;color:white;text-decoration:none;font-size: 1.5rem;" href="contactUs.html">Contact Us</a>
         </div>
     </nav>
 
     <div class="mainHeader">
             <div>
-                <img src="./assets/images/network4.jpeg" />
-                <img src="./assets/images/network1.jpeg" />
-                <img src="./assets/images/network2.jpeg" />
-                <img src="./assets/images/network3.jpeg" />
-                <img src="./assets/images/network4.jpeg" />
+                <img src="./assets/images/network4.jpg" />
+                <img src="./assets/images/network1.jpg" />
+                <img src="./assets/images/network2.jpg" />
+                <img src="./assets/images/network3.jpg" />
+                <img src="./assets/images/network4.jpg" />
                 <div class="darkscreen"></div>
                 <p>
                     Our mission is to help enterprises organize<br>
@@ -58,20 +56,32 @@
         </div>
 
         <div id="aboutDiv2" class="hide">
-            <h3 style="margin-bottom: 2px;">We span a collection of Networking Solutions</h3>
-            Our certified employees have expertise in networking and cloud infrastructure
-            from recognized technology vendors, including Cisco, Juniper, VMWare, Fortinet.
-            Our operations include WAN/LAN, SDWAN, wireless, VoIP, Security,
-            and coding in popular programming languages, Python and Linux.
-
+        <div style="margin: 0;padding:0;">
+                <h3 style="margin: 0 auto 2px;">We span a collection of Networking Solutions</h3>
+                Our certified employees have expertise in networking and cloud infrastructure
+                from recognized technology vendors, including Cisco, Juniper, VMWare, Fortinet.
+                Our operations include WAN/LAN, SDWAN, wireless, VoIP, Security,
+                and coding in popular programming languages, Python and Linux.
+            </div>
         </div>
 
-        <div id="aboutDiv3" class="hide">
-            Pictures and Job Positions
+        <div id="leaderDiv" class="hide">
+            <div>
+                <img src="assets/images/Raquel_Lalondriz.jpg" alt="Chief Executive Officer">
+                <h6>Raquel Lalondriz <br> Chief Executive Officer</h6>
+            </div>
+            <div>
+                <img src="assets/images/Tiana_Alvarado.jpg" alt="Chief Operations Officer">
+                <h6>Tiana Alvarado <br> Chief Operations Officer</h6>
+            </div>
+            <div>
+                <img src="assets/images/Noraima_Reyes.jpg" alt="Customer Relations Specialist">
+                <h6>Noraima Reyes <br> Customer Relations Specialist</h6>
+            </div>
         </div>
     </div>
 
-    <script src="./assets/js/about.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
