completed the functionality of the contact form. [2h]

--- a/contactUs.html
+++ b/contactUs.html
@@ -63,9 +63,15 @@
                 <textarea name="help" id="help" placeholder="message"></textarea>
             </div>
 
-            <input type="submit">
+            <input id="submit" type="submit">
         </form>
     </main>
+
+    <button id="sendMail" style="background:green;color:white">Send Email</button>
+
+    <script src="https://smtpjs.com/v3/smtp.js">
+    </script>
+    <script src="assets/js/sendMail.js"></script>
 </body>
 
 </html>
