--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
             </div>
         </div>
 
-
     <!-- <div class="container">
         <div id="main">
             Our mission is to help enterprises organize<br>
@@ -41,22 +40,21 @@
             the demands of modern cybersecurity.
         </div>
     </div> -->
-    <nav class="aboutNav">
+    <nav id="aboutNav">
         <button id="whoWeAre" class="active">Who We Are</button>
         <button id="whatWeDo" class="notActive">What We Do</button>
         <button id="leadership" class="notActive">Leadership</button>
     </nav>
 
     <div class="slideUpDiv">
-
         <div id="aboutDiv1" class="slideUp">
             Hispanic Female Network Solutions (HIFENET),<br>
             a minority company founded in Delaware,<br>
             specializes in IT technologies and Network security.
         </div>
 
-        <div id="aboutDiv2" class="hide">
-        <div style="margin: 0;padding:0;">
+        <div id="aboutDiv2" class="slideUp">
+        <div style="margin: 0;padding:0;font-size: 2rem;">
                 <h3 style="margin: 0 auto 2px;">We span a collection of Networking Solutions</h3>
                 Our certified employees have expertise in networking and cloud infrastructure
                 from recognized technology vendors, including Cisco, Juniper, VMWare, Fortinet.
@@ -65,18 +63,18 @@
             </div>
         </div>
 
-        <div id="leaderDiv" class="hide">
+        <div id="leaderDiv" class="slideUp">
             <div>
                 <img src="assets/images/Raquel_Lalondriz.jpg" alt="Chief Executive Officer">
-                <h6>Raquel Lalondriz <br> Chief Executive Officer</h6>
+                <h5>Raquel Lalondriz <br> Chief Executive Officer</h5>
             </div>
             <div>
                 <img src="assets/images/Tiana_Alvarado.jpg" alt="Chief Operations Officer">
-                <h6>Tiana Alvarado <br> Chief Operations Officer</h6>
+                <h5>Tiana Alvarado <br> Chief Operations Officer</h5>
             </div>
             <div>
                 <img src="assets/images/Noraima_Reyes.jpg" alt="Customer Relations Specialist">
-                <h6>Noraima Reyes <br> Customer Relations Specialist</h6>
+                <h5>Noraima Reyes <br> Customer Relations Specialist</h5>
             </div>
         </div>
     </div>
